# infinite-monkey-agent

./: .gitignore  CLAUDE.md  README.md  action.yml  factorial.py  issue_payload.json  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/workflows/: ai-comment-trigger.yml  ai-developer.yml  ai-review.yml  release.yml
ai_reviewer/: agent.py  cli.py  config.py  develop.py  github_utils.py  llm.py  tester.py
infinite_monkey_agent/: __init__.py  agent.py  api.py  cli.py  config.py  develop.py  fibonacci.py  git_utils.py  github_utils.py  math_utils.py  review.py  tester.py
infinite_monkey_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/: agent.ts  cli.ts  config.ts  develop.ts  git.ts  github.ts  index.ts  llm.ts  tester.ts
src/routes/: users.ts
tests/: test_agent.py  test_api.py  test_config.py  test_fibonacci.py
