[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-reviewer"
version = "1.0.0"
description = "AI-powered code reviewer and autonomous developer agent"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "zakerytclarke" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.25.0"
]

[project.scripts]
ai-reviewer = "ai_reviewer.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ai_reviewer*"]
