[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "infinite-monkey-agent"
version = "1.0.0"
description = "AI-powered code reviewer and autonomous developer agent"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "zakerytclarke" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.25.0",
    "fastapi>=0.110.0,<1.0.0",
    "sqlalchemy>=2.0.0,<3.0.0",
    "uvicorn>=0.27.0,<1.0.0",
    "httpx>=0.27.0,<1.0.0"
]

[project.scripts]
infinite-monkey-agent = "infinite_monkey_agent.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["infinite_monkey_agent*"]
